demo-test/deom-nginx-kustomization/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-http
spec:
  hostnames:
    - "nginx01.maunghtoo.cloud"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: alb-gateway
    namespace: default
    sectionName: https
  rules:
    - backendRefs:
      - group: ''
        kind: Service
        name: nginx
        port: 80
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
